--- a/Tickets - Backup.csproj
+++ b/Tickets - Backup.csproj
@@ -8,8 +8,9 @@
 
   <ItemGroup>
     <Folder Include="Data\" />
-    <Folder Include="Extensors\" />
+    <Folder Include="BLL\" />
     <Folder Include="Pages\Consultas\" />
+    <Folder Include="Pages\Registros\" />
   </ItemGroup>
 
   <ItemGroup>
@@ -18,6 +19,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="Radzen.Blazor" Version="4.11.2" />
   </ItemGroup>
 
 </Project>
