--- a/Tickets.csproj
+++ b/Tickets.csproj
@@ -8,7 +8,6 @@
 
   <ItemGroup>
     <Folder Include="Data\" />
-    <Folder Include="Extensors\" />
     <Folder Include="Pages\Consultas\" />
   </ItemGroup>
 
@@ -18,6 +17,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="Radzen.Blazor" Version="4.11.2" />
   </ItemGroup>
 
 </Project>
